# hyperfetch

./: Cargo.toml  LICENSE  README.md
AUR_test/: .SRCINFO  PKGBUILD
src/: cli.rs  config.rs  main.rs
src/core/: cache.rs  mod.rs  module.rs  sys_paths.rs
src/modules/: battery.rs  cpu.rs  cpu_freq.rs  custom.rs  desktop.rs  disk.rs  display.rs  environment.rs  extended.rs  gpu.rs  kernel.rs  memory.rs  mod.rs  network.rs  os.rs  packages.rs  sensors.rs  shell.rs  terminal.rs  uptime.rs  vram.rs  wifi.rs
src/ui/: ascii.rs  display.rs  mod.rs
