[package]
name = "fetch"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = "0.30"
colored = "2"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
dirs = "5"
rayon = "1.11.0"
toml = "1.0.6"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
