[package]
name = "hyperfetch"
version = "0.2.0-next"
edition = "2021"

[dependencies]
sysinfo = "0.30"
colored = "2"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
dirs = "5"
rayon = "1.11.0"
toml = "1.0.6"
once_cell = "1.21.4"
smallvec = "1.15.1"
clap_complete = "4.6.0"
wait-timeout = "0.2.1"
crossterm = "0.28"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
